fix uneven spacing for download section
allows "download section" to shrink evenly at small media query break points

--- a/styles/download.module.css
+++ b/styles/download.module.css
@@ -12,6 +12,7 @@
 
 @media only screen and (max-width: 600px) {
   .download_section {
-    padding: 50px;
+    padding: 80px 50px;
+    min-height: 10vh;
   }
 }
